tests/diagnostic_golden_cc/semantic_ambiguous_interfaces.diag
error[CF3116]: Ambiguous interfaces
  --> tests/diagnostic_golden_cc/semantic_ambiguous_interfaces.f90:4:1
   = stage: semantic
   = help: see docs/errors.md#CF3116
  |
4 |     module procedure sub_b
  | ^ ambiguous specific here
  ::: tests/diagnostic_golden_cc\semantic_ambiguous_interfaces.f90
  |
3 |     module procedure sub_a
  | ~ conflicting specific here
   = note: generic interface specifics must be distinguishable by their required dummy arguments
   = help: change one specific's required dummy argument characteristics or split the generic interface
